# rmis_ws

./: LICENSE  README.md  summary.txt
install/: local_setup.sh  setup.sh
install/kinect2_bridge/lib/kinect2_bridge/: kinect2_bridge
install/kinect2_bridge/share/kinect2_bridge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build
rmis/: CMakeLists.txt  index.html  package.xml
rmis/config/: controllers.yaml
rmis/launch/: gazebo.launch.py
rmis/meshes/stl/: TF_Luna.stl  base.stl  head_joint.stl  head_link.stl  l_ankle_joint.stl  l_ankle_link.stl  l_arm_joint.stl  l_arm_link.stl  l_feet_link.stl  l_hand_joint.stl  l_hip_joint.stl  l_hip_link.stl  l_lower_leg_joint.stl  l_lower_leg_link.stl  l_shoulder_joint.stl  l_shoulder_link.stl  l_upper_leg_joint.stl  l_upper_leg_link.stl  lower_body_link.stl  neck_joint.stl  r_ankle_joint.stl  r_ankle_link.stl  r_arm_joint.stl  r_arm_link.stl  r_feet_link.stl  r_hand_joint.stl  r_hip_joint.stl  r_hip_link.stl  r_lower_leg_joint.stl  r_lower_leg_link.stl  r_shoulder_joint.stl  r_shoulder_link.stl  r_upper_leg_joint.stl  r_upper_leg_link.stl
rmis/urdf/: code.txt  rmisurdf.urdf  robot.urdf  robot12.urdf
rmis/worlds/: stable.world
skeleton_image_publisher/: CMakeLists.txt  package.xml
skeleton_image_publisher/src/: skeleton_image_publisher.cpp
src/rmis_data_publisher/: package.xml  setup.cfg  setup.py
src/rmis_data_publisher/launch/: data_publisher_launch.py
src/rmis_description/: CMakeLists.txt
src/rmis_description/urdf/: test_mesh.urdf
src/rmis_description/worlds/: empty.sdf
(+74 files in other folders)
